[gd_scene load_steps=3 format=2]

[ext_resource path="res://addons/miros/resource/Theme/theme.tres" type="Theme" id=1]
[ext_resource path="res://addons/miros/module/SuperTag/UI/TagInspectorUI.gd" type="Script" id=2]

[node name="TagInpsectorUI" type="VBoxContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
script = ExtResource( 2 )

[node name="Title" type="Label" parent="."]
margin_right = 1024.0
margin_bottom = 17.0
theme = ExtResource( 1 )
text = "SuperTag - 超级标签"
align = 1

[node name="HSeparator" type="HSeparator" parent="."]
margin_top = 21.0
margin_right = 1024.0
margin_bottom = 25.0

[node name="SelfTags" type="HBoxContainer" parent="."]
margin_top = 29.0
margin_right = 1024.0
margin_bottom = 52.0

[node name="Label" type="Label" parent="SelfTags"]
margin_top = 3.0
margin_right = 510.0
margin_bottom = 20.0
size_flags_horizontal = 3
text = "自身标签:"

[node name="OptionButton" type="OptionButton" parent="SelfTags"]
margin_left = 514.0
margin_right = 1024.0
margin_bottom = 23.0
size_flags_horizontal = 3

[node name="DelTag" type="Button" parent="."]
margin_top = 56.0
margin_right = 1024.0
margin_bottom = 79.0
text = "删除标签"

[node name="AllTags" type="HBoxContainer" parent="."]
margin_top = 83.0
margin_right = 1024.0
margin_bottom = 106.0

[node name="Label" type="Label" parent="AllTags"]
margin_top = 3.0
margin_right = 510.0
margin_bottom = 20.0
size_flags_horizontal = 3
text = "所有标签:"

[node name="TagsOption" type="OptionButton" parent="AllTags"]
margin_left = 514.0
margin_right = 1024.0
margin_bottom = 23.0
size_flags_horizontal = 3

[node name="AddTag" type="Button" parent="."]
margin_top = 110.0
margin_right = 1024.0
margin_bottom = 133.0
text = "添加标签"

[node name="HSeparator2" type="HSeparator" parent="."]
margin_top = 137.0
margin_right = 1024.0
margin_bottom = 141.0

[node name="Title2" type="Label" parent="."]
margin_top = 145.0
margin_right = 1024.0
margin_bottom = 162.0
text = "Extra Property - 附加属性"
align = 1

[connection signal="button_down" from="AddTag" to="." method="_on_AddTag_button_down"]
